# apidocs.json
@@ -266,6 +266,20 @@
      }
     }
    }
+  },
+  "/api/v1/status": {
+   "get": {
+    "tags": [
+     "status"
+    ],
+    "summary": "Get the status of the Function Stream",
+    "operationId": "getStatus",
+    "responses": {
+     "200": {
+      "description": "OK"
+     }
+    }
+   }
   }
  },
  "definitions": {
